# GeoQuickLookup

./: .gitignore  README.md  README_SETUP.md  install_cmake.sh  setup_and_run.sh  setup_and_test.sh
geolocation/: CMakeLists.txt  geolocation_test.py
geolocation/include/geo/: bin_format.h  geo_common.h
geolocation/src/: database.cpp  database.h  preprocess.cpp  preprocess_main.cpp  sample_app.cpp
